[gd_scene load_steps=3 format=3 uid="uid://be3ve1bjed80e"]

[ext_resource type="Script" path="res://Node2D.gd" id="1_ekesy"]

[sub_resource type="ButtonGroup" id="ButtonGroup_u2keb"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ekesy")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 720.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label_BP" type="Label" parent="CenterContainer"]
layout_mode = 2
text = "Binary Patterns"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Grid_main" type="GridContainer" parent="."]
offset_left = 8.0
offset_top = 40.0
offset_right = 712.0
offset_bottom = 155.0
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 7
columns = 4

[node name="Label_number" type="Label" parent="Grid_main"]
layout_mode = 2
text = "number:"

[node name="Text_number" type="TextEdit" parent="Grid_main"]
custom_minimum_size = Vector2(300, 35)
layout_mode = 2
text = "654321"
middle_mouse_paste_enabled = false

[node name="Button_rnd" type="Button" parent="Grid_main"]
layout_mode = 2
text = "random"

[node name="Button_play" type="Button" parent="Grid_main"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
toggle_mode = true
text = "play"

[node name="Label_binary" type="Label" parent="Grid_main"]
layout_mode = 2
text = "binary:"

[node name="Text_binary" type="TextEdit" parent="Grid_main"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "1010111101100"

[node name="Label_point_size" type="Label" parent="Grid_main"]
visible = false
layout_mode = 2
text = "point size:"

[node name="Text_point_size" type="TextEdit" parent="Grid_main"]
visible = false
layout_mode = 2
text = "10"
middle_mouse_paste_enabled = false

[node name="Label_width" type="Label" parent="Grid_main"]
visible = false
layout_mode = 2
text = "width:"

[node name="Text_width" type="TextEdit" parent="Grid_main"]
visible = false
layout_mode = 2
text = "72"
middle_mouse_paste_enabled = false

[node name="Button_redraw" type="Button" parent="Grid_main"]
layout_mode = 2
text = "force redraw"

[node name="Control2" type="Control" parent="Grid_main"]
layout_mode = 2

[node name="Label_colors" type="Label" parent="Grid_main"]
layout_mode = 2
text = "color mode:	"

[node name="HBC_colors" type="HBoxContainer" parent="Grid_main"]
layout_mode = 2

[node name="CheckBox_1" type="CheckBox" parent="Grid_main/HBC_colors"]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_u2keb")
text = "1"

[node name="CheckBox_2" type="CheckBox" parent="Grid_main/HBC_colors"]
layout_mode = 2
button_group = SubResource("ButtonGroup_u2keb")
text = "2"

[node name="CheckBox_3" type="CheckBox" parent="Grid_main/HBC_colors"]
layout_mode = 2
button_group = SubResource("ButtonGroup_u2keb")
text = "3"

[node name="CheckBox_4" type="CheckBox" parent="Grid_main/HBC_colors"]
layout_mode = 2
button_group = SubResource("ButtonGroup_u2keb")
text = "4"

[node name="Button_multiple" type="Button" parent="Grid_main"]
visible = false
layout_mode = 2
text = "multiple"

[node name="HBC_params" type="HBoxContainer" parent="Grid_main"]
layout_mode = 2

[node name="Label_param1" type="Label" parent="Grid_main/HBC_params"]
layout_mode = 2
text = "param1:"

[node name="Text_param1" type="TextEdit" parent="Grid_main/HBC_params"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "-1"
middle_mouse_paste_enabled = false

[node name="Label_param2" type="Label" parent="Grid_main/HBC_params"]
layout_mode = 2
text = "param1:"

[node name="Text_param2" type="TextEdit" parent="Grid_main/HBC_params"]
custom_minimum_size = Vector2(40, 35)
layout_mode = 2
text = "1"
middle_mouse_paste_enabled = false

[node name="Control3" type="Control" parent="Grid_main"]
layout_mode = 2

[connection signal="text_changed" from="Grid_main/Text_number" to="." method="_on_number_changed"]
[connection signal="button_up" from="Grid_main/Button_rnd" to="." method="_on_button_rnd"]
[connection signal="text_changed" from="Grid_main/Text_binary" to="." method="_on_binary_changed"]
[connection signal="text_changed" from="Grid_main/Text_point_size" to="." method="_on_number_changed"]
[connection signal="text_changed" from="Grid_main/Text_width" to="." method="_on_number_changed"]
[connection signal="button_up" from="Grid_main/Button_redraw" to="." method="_redraw"]
[connection signal="pressed" from="Grid_main/HBC_colors/CheckBox_1" to="." method="_redraw"]
[connection signal="pressed" from="Grid_main/HBC_colors/CheckBox_2" to="." method="_redraw"]
[connection signal="pressed" from="Grid_main/HBC_colors/CheckBox_3" to="." method="_redraw"]
[connection signal="pressed" from="Grid_main/HBC_colors/CheckBox_4" to="." method="_redraw"]
[connection signal="button_up" from="Grid_main/Button_multiple" to="." method="_redraw"]
[connection signal="text_changed" from="Grid_main/HBC_params/Text_param1" to="." method="_on_number_changed"]
[connection signal="text_changed" from="Grid_main/HBC_params/Text_param2" to="." method="_on_number_changed"]
